deploy/kubernetes/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gophie-web
  namespace: gophie
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gophie-web
  template:
    metadata:
      labels:
        app: gophie-web
    spec:
      containers:
      - name: gophie-web
        image: gcr.io/khidom/gophie-web
        ports:
        - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: gophie-web
  namespace: gophie
spec:
  type: ClusterIP
  selector:
    app: gophie-web
  ports:
  - port: 80
    targetPort: 3000
